--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
     <div class="image-section">
       <h2>Rounded Corners</h2>
       <p>The <code>.img-rounded</code> class add rounded corners to an image (not available in IE8) </p>
-      <img src="..\images\nature.jpg" class="img-rounded" alt="Nature" width="304" height="236">
+      <img src=".\images\nature.jpg" class="img-rounded" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Circle</h2>
       <p>The <code>.img-circle</code> class shapes the image to a circle (not available in IE8). </p>
-      <img src="..\images\nature1.jpeg" class="img-circle" alt="Nature" width="304" height="236">
+      <img src=".\images\nature1.jpeg" class="img-circle" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Thumbnail</h2>
       <p>The <code>.img-thumnail</code> class shapes the image to a thumbnail.</p>
-      <img src="..\images\nature.jpg" class="img-thumnail" alt="Nature" width="304" height="236">
+      <img src=".\images\nature.jpg" class="img-thumnail" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Responsive Images</h2>
       <p>Responsive images automatically adjust to fit the size of the screen.</p>
       <p>Create responsive images by adding an <code>.img-responsive</code> class to the <code>img</code> tag. The image will then scale nicely to the parent element.</p>
       <p>The <code>.img-responsive</code> class applies <code>display: block;</code> and <code>max-width: 100%;</code> and <code>height: auto;</code> to the image: </p>
-      <img src="..\images\nature.jpg" class="img-responsive" alt="Nature" width="460" height="345">
+      <img src=".\images\nature.jpg" class="img-responsive" alt="Nature" width="460" height="345">
     </div>
   </div>
 </body>
