--- a/index.html
+++ b/index.html
@@ -22,24 +22,68 @@
     <div class="image-section">
       <h2>Rounded Corners</h2>
       <p>The <code>.img-rounded</code> class add rounded corners to an image (not available in IE8) </p>
-      <img src=".\images\nature.jpg" class="img-rounded" alt="Nature" width="304" height="236">
+      <img src="..\images\nature.jpg" class="img-rounded" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Circle</h2>
       <p>The <code>.img-circle</code> class shapes the image to a circle (not available in IE8). </p>
-      <img src=".\images\nature1.jpeg" class="img-circle" alt="Nature" width="304" height="236">
+      <img src="..\images\nature1.jpeg" class="img-circle" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Thumbnail</h2>
       <p>The <code>.img-thumnail</code> class shapes the image to a thumbnail.</p>
-      <img src=".\images\nature.jpg" class="img-thumnail" alt="Nature" width="304" height="236">
+      <img src="..\images\nature.jpg" class="img-thumnail" alt="Nature" width="304" height="236">
     </div>
     <div class="image-section">
       <h2>Responsive Images</h2>
       <p>Responsive images automatically adjust to fit the size of the screen.</p>
       <p>Create responsive images by adding an <code>.img-responsive</code> class to the <code>img</code> tag. The image will then scale nicely to the parent element.</p>
       <p>The <code>.img-responsive</code> class applies <code>display: block;</code> and <code>max-width: 100%;</code> and <code>height: auto;</code> to the image: </p>
-      <img src=".\images\nature.jpg" class="img-responsive" alt="Nature" width="460" height="345">
+      <img src="..\images\nature.jpg" class="img-responsive" alt="Nature" width="460" height="345">
+    </div>
+    <div class="image-section">
+      <h2>Image Gallery</h2>
+      <p>The <code>.thumbnail</code> class can be used to display an image gallery.</p>
+      <p>The <code>.caption</code> class adds propers padding and a dark grey color to text inside thumbnails.</p>
+      <p>Click on the images to enlarge them.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="..\images\nature.jpg" alt="Nature" style="width:100%">
+            <div class="caption">
+              <p>This is caption for nature picture</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="..\images\nature.jpg" alt="Nature" style="width:100%">
+            <div class="caption">
+              <p>This is caption for nature picture</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <img src="..\images\nature.jpg" alt="Nature" style="width:100%">
+            <div class="caption">
+              <p>This is caption for nature picture</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="image-section">
+      <h2>Responsive Embed</h2>
+      <p>Create a responsive video and scale it nicely to the parent elemen.</p>
+      <h3>Aspect ratio 16:9</h3>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+      </div>
+      <h3>Aspect ratio 4:3</h3>
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+      </div>
     </div>
   </div>
 </body>
