--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="date" class="col-xs-8 common-height">
       </div>
       <div class="row">
-        <label class="col-xs-4 label-type common-height">The second field</label>
+        <label class="col-xs-4 label-type common-height">Request Sheet</label>
         <select class="col-xs-5 common-height">
           <option value="Option 1"/>
           <option value="Option 2"/>
