--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <input type="date" class="col-xs-8 common-height">
       </div>
       <div class="row">
-        <label class="col-xs-4 label-type common-height">Request Sheet</label>
+        <label class="col-xs-4 label-type common-height">Abcdefg Hiklm</label>
         <select class="col-xs-5 common-height">
-          <option value="Option 1"/>
-          <option value="Option 2"/>
-          <option value="Option 3"/>
+          <option value="opt1">Option 1</option>
+          <option value="opt2">Option 2</option>
+          <option value="opt3">Option 3</option>
         </select>
         <button type="button" class="col-xs-3 btn-base common-height">SCAN</button>
       </div>
