--- a/pages/demo.html
+++ b/pages/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0087)file:///D:/Projects/HCV/HCV-Factory-Optimization/DemoV1/DemoV1/Prototype/IQC/IQC1.html# -->
 <html style="height: auto; min-height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HCV-IoT Demo</title>
     <link rel="stylesheet" href="../css/demo.css">
 </head>
